Correct spacing between sort dropdown radio and labels
Remove the padding from the links in the dropdown menus
and apply it to the row itself instead.

This makes it easier to keep consistent spacing with
different menu item contents in the dropdowns.

--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -203,7 +203,6 @@ html {
 
     display: block;
     line-height: 1;
-    padding: 1em;
     white-space: nowrap;
 
     &:hover {
@@ -328,12 +327,18 @@ html {
   visibility: visible;
 }
 
+// Row in a dropdown menu
 .dropdown-menu__row {
   display: flex;
   flex-direction: row;
   align-items: center;
+  height: 40px;
+  padding-left: 8px;
+  padding-right: 16px;
+  min-width: 120px;
 }
 
+// Radio button in a dropdown menu
 .dropdown-menu-radio {
   display: inline-block;
   width: 12px;
